Update publish.sh